--- a/client/to-do.html
+++ b/client/to-do.html
@@ -8,13 +8,13 @@
 
   <body>
     <header>
-      <h1>Comments</h1>
-      <p>A simple app that allows a user to input comments</p>
+      <h1>2Do List</h1>
+      <p>A simple app that allows a user to input 2do list items.</p>
     </header>
 
     <main>
       <section class="comment-input">
-        <p>Add Your Comment:</p>
+        <p>Add an item to the list:</p>
         <input><button>+</button>
       </section>
 
@@ -27,7 +27,7 @@
     </main>
 
     <footer>
-      <p>this work is released into the public domain</p>
+      <p>This work is for CIS 281 Project 4</p>
     </footer>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
